src/test/testFiles/invalid/syntaxErrors/invalidTypeParameter.manimdsl
let a: Stack = new Stack<asd>;
